syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";

service Sports {
  // ListSports will return a collection of all sports.
  rpc ListSports(ListSportsRequest) returns (ListSportsResponse) {}
}

/* Requests/Responses */

message ListSportsRequest {}


// Response to ListSports call.
message ListSportsResponse {
  repeated Sport sports = 1;
}

/* Resources */
message Sport {
  // ID represents a unique identifier for the sport.
  int64 id = 1;
  // Name is used to identify the sport event easily; combining the sport, teams and time of event.
  string name = 2;
  // Name of the type of game
  string game = 3;
  // Name of the first team playing this event
  string team_1 = 4;
  // Name of the second team playing this event
  string team_2 = 5;
  // AdvertisedStartTime is the time the sport is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
}

